--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
       <div class="box four">Lorem Ipsum</div>
 
       <img class="spinner" src="./images/icons8-loading-50 1.svg" alt="" />
-      <img src="./images/icons8-loading-50 1.svg" alt="" />
+      <img class="fancy-spin" src="./images/icons8-loading-50 1.svg" alt="" />
+
+      <div class="box five"></div>
+      <div class="box six"></div>
+      <div id="id-seven" class="box seven"></div>
+      <div class="box eight"></div>
+      <div class="box nine"></div>
    </body>
 </html>
